Replaced uses of Double constructor with Double.valueOf() as it is more efficient.